--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-modal": "^3.16.1",
