--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.10.15",
-    "@mui/material": "^5.10.15",
+    "@mui/material": "^5.11.2",
+    "@mui/x-date-pickers": "^5.0.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.36.3",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.0",
+    "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
