--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "firebase": "^9.14.0",
     "postcss": "^8.4.19",
     "react": "^18.2.0",
