--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.12",
     "react-toastify": "^9.1.1",
     "socket.io-client": "^4.5.4",
     "tailwind": "^4.0.0",
